# base

./: .editorconfig  .gitignore  CMakeLists.txt  Doxyfile  main.cpp  readme.md
include/: log.h
test/: test_log.cpp
